# django-telegram-sentry

./: LICENSE  MANIFEST.in  README.rst  setup.cfg
.github/workflows/: workflow.yml
django_telegram_sentry/: apps.py  handler.py
